--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -62,11 +62,11 @@
   </style>
 
   <script>
-    const inputs = document.querySelectorAll('.controls input');
+    const inputs = document.querySelectorAll('.controls input'); //controls >>> input (like nesting in css)
 
     function handleUpdate() {
-      const suffix = this.dataset.sizing || '';
-      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
+      const suffix = this.dataset.sizing || ''; //this.dataset is an object, but + .sizing=data-sizing of el (px) in HTML
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix) //gives it another values
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate));
